plugins {
    id 'base'
    id 'dev.architectury.loom' version '1.11-SNAPSHOT' apply false
    id 'architectury-plugin' version '3.4-SNAPSHOT'
    id 'com.gradleup.shadow' version '8.3.6' apply false
}

architectury {
    minecraft = project.minecraft_version
}

allprojects {
    group = rootProject.maven_group
    version = rootProject.mod_version
}

subprojects {
    apply from: "$rootDir/repositories.gradle"

    apply plugin: 'dev.architectury.loom'
    apply plugin: 'architectury-plugin'

    sourceSets {
        main.resources.srcDirs = ['src/main/resources', 'src/generated/resources']
    }

    base {
        archivesName = "$rootProject.archives_name-$project.name"
    }

    loom {
        silentMojangMappingsLicense()
    }

    dependencies {
        minecraft "net.minecraft:minecraft:$rootProject.minecraft_version"
        mappings loom.officialMojangMappings()
    }

    java {
        withSourcesJar()

        sourceCompatibility = JavaVersion.VERSION_21
        targetCompatibility = JavaVersion.VERSION_21
    }

    tasks.withType(JavaCompile).configureEach {
        it.options.release = 21
    }
}

tasks.register('collectJars', Copy) {
    dependsOn subprojects.collect { it.tasks.named('remapJar') }

    from(subprojects.findAll { it.name != 'common' }.collect { it.tasks.named('remapJar').get().archiveFile })
    into(layout.buildDirectory.dir('libs'))
}

tasks.assemble.dependsOn(collectJars)